EdgeSplit modifier prevents All Edge to be work correctly since 2.63 #31489

Closed
opened 2012-05-17 00:27:09 +02:00 by Sanc Tuary · 4 comments

%%%Revision 46680 from the buildbot on window XP 32bits

How to reproduce the problem :

  • Default Cube
  • In Edit Mode subdivide once or twice
  • In Object Mode, use Wireframe display
  • As expected depending if in the "Display" tab of the N panel you enable or not the "All Edge" setting, you will be able to see or not all the edges
  • Add an Edge Split modifier to that cube.

Now even if you turn off the "All Edge" setting, you will continue to see all the edges in the cube.
Only workaround if you need "All Edges" to be on while having the edgesplit modifier active is to click on "eye" icon of the modifier to disable the "realtime display".

In 2.62 and previous this never happened, even with the Edgesplit active and realtime, you could always turn off the "All Edges" setting and having the edge indeed becoming hidden.%%%

%%%Revision 46680 from the buildbot on window XP 32bits How to reproduce the problem : - Default Cube - In Edit Mode subdivide once or twice - In Object Mode, use Wireframe display - As expected depending if in the "Display" tab of the N panel you enable or not the "All Edge" setting, you will be able to see or not all the edges - Add an Edge Split modifier to that cube. Now even if you turn off the "All Edge" setting, you will continue to see all the edges in the cube. Only workaround if you need "All Edges" to be on while having the edgesplit modifier active is to click on "eye" icon of the modifier to disable the "realtime display". In 2.62 and previous this never happened, even with the Edgesplit active and realtime, you could always turn off the "All Edges" setting and having the edge indeed becoming hidden.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Additional information/bug report:

Hide no longer functions properly for objects with Edge Split modifier while in Wireframe mode. Mesh elements disappear but leave a faint wireframe image.

Swap to solid mode and hide works fine;

Or remove Edge Split and stay in Wireframe and Hide works fine%%%

%%%Additional information/bug report: Hide no longer functions properly for objects with Edge Split modifier while in Wireframe mode. Mesh elements disappear but leave a faint wireframe image. Swap to solid mode and hide works fine; Or remove Edge Split and stay in Wireframe and Hide works fine%%%

%%%fixed r46868.%%%

%%%fixed r46868.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31489
No description provided.