fix [#31489] EdgeSplit modifier prevents All Edge to be work correctly since 2.63

bmesh regression where the edge-draw flag was cleared when bmesh modifiers were used.